--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,21 @@
 <resources>
-    <string name="app_name">primeiroApp</string>
-    <string name="hello_dio">Ola mundo dio</string>
-    <string name="monkey">Macaco</string>
-    <string name="keyboard">Teclado</string>
-    <string name="dog">cachorro</string>
-    <string name="cat">gato</string>
-    <string name="shark">tubarao</string>
+    <string name="app_name">Carro Eletrico</string>
+    <string name="preco">Preço</string>
+    <string name="carros">Carros</string>
+    <string name="favoritos">Favoritos</string>
+    <string name="bateria">Bateria</string>
+    <string name="potencia">Potencia</string>
+    <string name="recarga">Recarga</string>
+    <string name="search_carros">Buscar Carros...</string>
+    <string name="preco_kwh">Preço Kwh</string>
+    <string name="km_percorrido">Km percorrido</string>
+    <string name="calcular">Calcular</string>
+    <string name="result">Resultado R$</string>
+    <string name="calcular_autonomia">Calcular Autonomia</string>
+    <string-array name="array_cidades" translatable="false">
+        <item>Sete quedas</item>
+        <item>Tacuru</item>
+        <item>Dourados</item>
+        <item>Amambai</item>
+    </string-array>
 </resources>
